Split wordcloud-app.js into multiple js files

--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
   <script src="./assets/web-l10n/l10n.js" defer></script>
   <script src="./assets/wordfreq/src/wordfreq.js" defer></script>
   <script src="./assets/wordcloud2.js/src/wordcloud2.js" defer></script>
-  <script src="./assets/wordcloud-app.js" defer></script>
+  <script src="./assets/app.js" defer></script>
+  <script src="./assets/views.js" defer></script>
+  <script src="./assets/canvas-view.js" defer></script>
+  <script src="./assets/source-dialog-view.js" defer></script>
+  <script src="./assets/dashboard-view.js" defer></script>
+  <script src="./assets/sharer-dialog-view.js" defer></script>
+  <script src="./assets/panels.js" defer></script>
+  <script src="./assets/fetchers.js" defer></script>
   <script src="./assets/start.js" defer></script>
   <!-- endbuild -->
 
