--- a/test/index.html
+++ b/test/index.html
@@ -21,7 +21,14 @@
   <script src="../assets/wordcloud2.js/src/wordcloud2.js"></script>
 
   <!-- script to test -->
-  <script src="../assets/wordcloud-app.js"></script>
+  <script src="../assets/app.js" defer></script>
+  <script src="../assets/views.js" defer></script>
+  <script src="../assets/canvas-view.js" defer></script>
+  <script src="../assets/source-dialog-view.js" defer></script>
+  <script src="../assets/dashboard-view.js" defer></script>
+  <script src="../assets/sharer-dialog-view.js" defer></script>
+  <script src="../assets/panels.js" defer></script>
+  <script src="../assets/fetchers.js" defer></script>
 
   <!-- test scripts -->
   <script src="unit/app.js"></script>
