--- a/index.html
+++ b/index.html
@@ -400,6 +400,11 @@
         </div>
       </div>
       <div id="wc-about-content">...</div>
+      <div id="wc-about-donate" hidden>
+        <h3 data-l10n-id="donate"></h3>
+        <p data-l10n-id="donate-desc"></p>
+        <div id="wc-about-donate-content"></div>
+      </div>
     </div>
     <div class="modal-footer">
       <button data-l10n-id="about-dialog-close-btn" id="wc-about-close-btn" class="btn btn-primary"></button>
