Enable running tests with one command

--- a/test/index.html
+++ b/test/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>wordcloud app tests</title>
-  <link rel="stylesheet" href="qunit/qunit/qunit.css">
+  <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.12.0.css">
 </head>
 <body>
   <div id="qunit"></div>
-  <script src="qunit/qunit/qunit.js"></script>
+  <script src="http://code.jquery.com/qunit/qunit-1.12.0.js"></script>
   <script>
     QUnit.config.testTimeout = 10*1E3;
   </script>
