+ Electronic Frontier Foundation Updates

--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
                 value="wikipedia.zh:雲">
               <span data-l10n-id="panel-example-wikipedia-zh-cloud"></span>
             </label>
+            <label class="radio only-en-US">
+              <input type="radio" name="example"
+                value="feed:https://www.eff.org/rss/updates.xml">
+              <span data-l10n-id="panel-example-eff"></span>
+            </label>
             <label class="radio only-zh-TW">
               <input type="radio" name="example"
                 value="feed:http://www.president.gov.tw/RSS.aspx?tabid=1104&amp;moduleid=2074">
