Show a box with label when the cursor hovers over

--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
 </head>
 <body>
   <div id="wc-canvas-container">
-    <canvas id="wc-canvas"></canvas>
+    <div id="wc-canvas">
+      <canvas id="wc-canvas-canvas"></canvas>
+      <div id="wc-canvas-hover" hidden>
+        <span id="wc-canvas-hover-label" data-l10n-id="hover-count"></span>
+      </div>
+    </div>
   </div>
 
   <div id="wc-loading">
