+ Flattr payment button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
   <link rel="prefetch" type="application/l10n" href="./locales/locales.ini?_=@@timestamp" />
 
+  <link rel="payment" href="https://flattr.com/submit/auto?url=https%3A%2F%2Fgithub.com%2Ftimdream%2Fwordcloud&amp;user_id=timdream" type="text/html" />
+
   <!-- For browser without Web Workers support, run the calculation
        on the main event loop with the worker script. -->
   <script src="./assets/wordfreq/src/wordfreq.worker.js?_=@@timestamp" defer></script>
