Include logo of all sizes as og:image

--- a/index.html
+++ b/index.html
@@ -16,9 +16,21 @@
   <!-- Unfortunately we need to hard-code these in HTML -->
   <meta property="og:url" content="http://timc.idv.tw/wordcloud/" />
   <meta property="og:title" content="HTML5 Word Cloud" />
-  <meta property="og:image" content="http://timc.idv.tw/wordcloud/assets/images/wordcloud-logo.png" />
   <meta property="fb:admins" content="541998202" />
   <meta property="fb:app_id" content="221493074531416" />
+
+  <meta property="og:image" content="http://timc.idv.tw/wordcloud/assets/images/wordcloud-logo.png" />
+  <meta property="og:image:width" content="432" />
+  <meta property="og:image:height" content="432" />
+  <meta property="og:image" content="http://timc.idv.tw/wordcloud/assets/images/wordcloud-logo-128.png" />
+  <meta property="og:image:width" content="128" />
+  <meta property="og:image:height" content="128" />
+  <meta property="og:image" content="http://timc.idv.tw/wordcloud/assets/images/wordcloud-logo-75.png" />
+  <meta property="og:image:width" content="75" />
+  <meta property="og:image:height" content="75" />
+  <meta property="og:image" content="http://timc.idv.tw/wordcloud/assets/images/wordcloud-logo-16.png" />
+  <meta property="og:image:width" content="16" />
+  <meta property="og:image:height" content="16" />
 
   <link rel="stylesheet" type="text/css" href="./assets/first-screen.css">
   <!-- Le styles -->
