+ favicon.ico with alpha (image generated with mozbrowser.getScreenshot())

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
   <meta property="og:image:width" content="16" />
   <meta property="og:image:height" content="16" />
 
+  <link rel="shortcut icon" href="./favicon.ico" />
+
   <link rel="stylesheet" type="text/css" href="./assets/first-screen.css">
   <!-- Le styles -->
   <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">
