--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
                 value="feed:http://rss.ptt.cc/Boy-Girl.xml">
               <span data-l10n-id="panel-example-ptt-bg"></span>
             </label>
+
+            <div id="wc-psm" hidden></div>
           </form>
 
           <form id="wc-panel-wikipedia" hidden>
