--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
   <meta property="og:description" content="Get the most frequent terms of posts of feeds in an tag cloud representation, powered by HTML5." />
 
   <!-- Unfortunately we need to hard-code these in HTML -->
-  <meta property="og:url" content="http://timc.idv.tw/wordcloud/" />
+  <meta property="og:url" content="http://timdream.org/wordcloud/" />
   <meta property="og:title" content="HTML5 Word Cloud" />
   <meta property="fb:admins" content="541998202" />
   <meta property="fb:app_id" content="221493074531416" />
 
-  <meta property="og:image" content="http://timc.idv.tw/wordcloud/assets/images/wordcloud-logo.png" />
+  <meta property="og:image" content="http://timdream.org/wordcloud/assets/images/wordcloud-logo.png" />
   <meta property="og:image:width" content="432" />
   <meta property="og:image:height" content="432" />
-  <meta property="og:image" content="http://timc.idv.tw/wordcloud/assets/images/wordcloud-logo-128.png" />
+  <meta property="og:image" content="http://timdream.org/wordcloud/assets/images/wordcloud-logo-128.png" />
   <meta property="og:image:width" content="128" />
   <meta property="og:image:height" content="128" />
-  <meta property="og:image" content="http://timc.idv.tw/wordcloud/assets/images/wordcloud-logo-75.png" />
+  <meta property="og:image" content="http://timdream.org/wordcloud/assets/images/wordcloud-logo-75.png" />
   <meta property="og:image:width" content="75" />
   <meta property="og:image:height" content="75" />
-  <meta property="og:image" content="http://timc.idv.tw/wordcloud/assets/images/wordcloud-logo-16.png" />
+  <meta property="og:image" content="http://timdream.org/wordcloud/assets/images/wordcloud-logo-16.png" />
   <meta property="og:image:width" content="16" />
   <meta property="og:image:height" content="16" />
 
@@ -40,15 +40,15 @@
   <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./assets/5dcf3829.wordcloud.css">
 
-  <link rel="prefetch" type="application/l10n" href="./locales/locales.ini?_=hz5a4mu3" />
+  <link rel="prefetch" type="application/l10n" href="./locales/locales.ini?_=hzgdlurw" />
 
   <link rel="payment" href="https://flattr.com/submit/auto?url=https%3A%2F%2Fgithub.com%2Ftimdream%2Fwordcloud&amp;user_id=timdream" type="text/html" />
 
   <!-- For browser without Web Workers support, run the calculation
        on the main event loop with the worker script. -->
-  <script src="./assets/wordfreq/src/wordfreq.worker.js?_=hz5a4mu3" defer></script>
+  <script src="./assets/wordfreq/src/wordfreq.worker.js?_=hzgdlurw" defer></script>
 
-  <script defer src="assets/a704cd18.app.min.js"></script>
+  <script defer src="assets/e4cfe6b7.app.min.js"></script>
 
 </head>
 <body>
