Replace the Start button with Facebook brand for Facebook panel

--- a/index.html
+++ b/index.html
@@ -309,6 +309,8 @@
 
       <button data-l10n-id="source-dialog-start-btn" id="wc-source-start-btn" class="btn btn-primary"></button>
 
+      <button id="wc-source-login-facebook-btn" class="btn btn-primary" hidden><i class="favicons-facebook"></i> <span data-l10n-id="source-dialog-login-facebook-btn"></span></button>
+
     </div>
   </div>
 
