--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
   <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./assets/5dcf3829.wordcloud.css">
 
-  <link rel="prefetch" type="application/l10n" href="./locales/locales.ini?_=i1zut6c0" />
+  <link rel="prefetch" type="application/l10n" href="./locales/locales.ini?_=i1zux04c" />
 
   <link rel="payment" href="https://flattr.com/submit/auto?url=https%3A%2F%2Fgithub.com%2Ftimdream%2Fwordcloud&amp;user_id=timdream" type="text/html" />
 
   <!-- For browser without Web Workers support, run the calculation
        on the main event loop with the worker script. -->
-  <script src="./assets/wordfreq/src/wordfreq.worker.js?_=i1zut6c0" defer></script>
+  <script src="./assets/wordfreq/src/wordfreq.worker.js?_=i1zux04c" defer></script>
 
-  <script defer src="assets/42f8a6bf.app.min.js"></script>
+  <script defer src="assets/de222b5b.app.min.js"></script>
 
 </head>
 <body>
