--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
   <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./assets/5dcf3829.wordcloud.css">
 
-  <link rel="prefetch" type="application/l10n" href="./locales/locales.ini?_=i2hqie3e" />
+  <link rel="prefetch" type="application/l10n" href="./locales/locales.ini?_=i2hqnxfk" />
 
   <link rel="payment" href="https://flattr.com/submit/auto?url=https%3A%2F%2Fgithub.com%2Ftimdream%2Fwordcloud&amp;user_id=timdream" type="text/html" />
 
   <!-- For browser without Web Workers support, run the calculation
        on the main event loop with the worker script. -->
-  <script src="./assets/wordfreq/src/wordfreq.worker.js?_=i2hqie3e" defer></script>
+  <script src="./assets/wordfreq/src/wordfreq.worker.js?_=i2hqnxfk" defer></script>
 
   <script defer src="assets/e44f2fbf.app.min.js"></script>
 
@@ -269,7 +269,7 @@
           <form id="wc-panel-facebook" hidden>
             <p id="wc-panel-facebook-status" data-l10n-id="loading"></p>
 
-            <p class="only-en-US">This feature to be disabled by Facebook on Apr 30th, 2015. <a href="http://blog.timc.idv.tw/posts/html5-word-cloud-to-lost-access-to-facebook-news-feed-on-april-30th-2015/#zh-tw-content">Understand what happened</a>.</p>
+            <p class="only-en-US">This feature to be disabled by Facebook on Apr 30th, 2015. <a href="http://blog.timc.idv.tw/posts/html5-word-cloud-to-lost-access-to-facebook-news-feed-on-april-30th-2015/">Understand what happened</a>.</p>
 
             <p class="only-zh-TW">此功能將於 2015 年 4 月 30 日被 Facebook 停用。<a href="http://blog.timc.idv.tw/posts/html5-word-cloud-to-lost-access-to-facebook-news-feed-on-april-30th-2015/#zh-tw-content">了解原因</a>。</p>
           </form>
