--- a/index.html
+++ b/index.html
@@ -281,11 +281,17 @@
           </form>
 
           <form id="wc-panel-facebook" hidden>
+            <div class="alert alert-block alert-warning only-en-US">
+              <h4>This feature to be disabled by Facebook on Apr 30th, 2015.</h4>
+              <span><a href="http://blog.timc.idv.tw/posts/html5-word-cloud-to-lost-access-to-facebook-news-feed-on-april-30th-2015/">Understand what happened</a>.</span>
+            </div>
+
+            <div class="alert alert-block alert-warning only-zh-TW">
+              <h4>此功能將於 2015 年 4 月 30 日被 Facebook 停用。</h4>
+              <span><a href="http://blog.timc.idv.tw/posts/html5-word-cloud-to-lost-access-to-facebook-news-feed-on-april-30th-2015/#zh-tw-content">了解原因</a>。</span>
+            </div>
+
             <p id="wc-panel-facebook-status" data-l10n-id="loading"></p>
-
-            <p class="only-en-US">This feature to be disabled by Facebook on Apr 30th, 2015. <a href="http://blog.timc.idv.tw/posts/html5-word-cloud-to-lost-access-to-facebook-news-feed-on-april-30th-2015/">Understand what happened</a>.</p>
-
-            <p class="only-zh-TW">此功能將於 2015 年 4 月 30 日被 Facebook 停用。<a href="http://blog.timc.idv.tw/posts/html5-word-cloud-to-lost-access-to-facebook-news-feed-on-april-30th-2015/#zh-tw-content">了解原因</a>。</p>
           </form>
 
           <form id="wc-panel-googleplus" hidden>
