--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="apple-mobile-web-app-title" content="Word Cloud">
   <link rel="apple-touch-icon-precomposed" href="./assets/images/wordcloud-logo.png" />
 
-  <meta name="description" content="Get the most frequent terms of posts of feeds in an tag cloud representation, powered by HTML5.">
-  <meta property="og:description" content="Get the most frequent terms of posts of feeds in an tag cloud representation, powered by HTML5." />
+  <meta name="description" content="Get the most frequent terms in an tag cloud representation, powered by HTML5.">
+  <meta property="og:description" content="Get the most frequent terms in an tag cloud representation, powered by HTML5." />
 
   <!-- Unfortunately we need to hard-code these in HTML -->
   <meta property="og:url" content="http://timdream.org/wordcloud/" />
@@ -105,26 +105,6 @@
               <a href="#" data-l10n-id="source-wikipedia" data-panel="wikipedia"></a></li>
 
             <li hidden>
-              <a href="#" data-l10n-id="source-twitter" data-panel="twitter"></a></li>
-            <li hidden>
-              <a href="#" data-l10n-id="source-plurk" data-panel="plurk"></a></li>
-            <li hidden>
-              <a href="#" data-l10n-id="source-blogger" data-panel="blogger"></a></li>
-            <li hidden>
-              <a href="#" data-l10n-id="source-tumblr" data-panel="tumblr"></a></li>
-            <li hidden>
-              <a href="#" data-l10n-id="source-wordpresscom" data-panel="wordpresscom"></a></li>
-            <li class="only-zh-TW" hidden>
-              <a href="#" data-l10n-id="source-pixnet" data-panel="pixnet"></a></li>
-            <li class="only-zh-TW" hidden>
-              <a href="#" data-l10n-id="source-wretchcc" data-panel="wretchcc"></a></li>
-             <li class="only-zh-TW" hidden>
-              <a href="#" data-l10n-id="source-yamblog" data-panel="yamblog"></a></li>
-            <!-- In memory of Aaron Swartz -->
-            <li hidden>
-              <a href="#" data-l10n-id="source-feed" data-panel="feed"></a></li>
-
-            <li hidden>
               <a href="#" data-l10n-id="source-googleplus" data-panel="googleplus"></a></li>
 
             <li hidden>
@@ -141,31 +121,6 @@
               <span data-l10n-id="browser-partial-support-message"></span>
             </div>
 
-            <label class="radio">
-              <input type="radio" name="example"
-                value="feed:http://www.nytimes.com/services/xml/rss/nyt/GlobalHome.xml" checked>
-              <span data-l10n-id="panel-example-nytimes-global"></span>
-            </label>
-            <label class="radio only-en-US">
-              <input type="radio" name="example"
-                value="feed:http://www.nytimes.com/services/xml/rss/nyt/HomePage.xml">
-              <span data-l10n-id="panel-example-nytimes-us"></span>
-            </label>
-            <label class="radio only-zh-TW">
-              <input type="radio" name="example"
-                value="feed:http://tw.news.yahoo.com/rss/politics">
-              <span data-l10n-id="panel-example-ynews-politics"></span>
-            </label>
-            <label class="radio only-zh-TW">
-              <input type="radio" name="example"
-                value="feed:http://tw.news.yahoo.com/rss/entertainment">
-              <span data-l10n-id="panel-example-ynews-entertainment"></span>
-            </label>
-            <label class="radio only-en-US">
-              <input type="radio" name="example"
-                value="feed:http://daringfireball.net/index.xml">
-              <span data-l10n-id="panel-example-daringfireball"></span>
-            </label>
             <label class="radio only-en-US">
               <input type="radio" name="example"
                 value="wikipedia:Cloud">
@@ -176,26 +131,6 @@
                 value="wikipedia.zh:雲">
               <span data-l10n-id="panel-example-wikipedia-zh-cloud"></span>
             </label>
-            <label class="radio only-en-US">
-              <input type="radio" name="example"
-                value="feed:https://www.eff.org/rss/updates.xml">
-              <span data-l10n-id="panel-example-eff"></span>
-            </label>
-            <label class="radio only-zh-TW">
-              <input type="radio" name="example"
-                value="feed:http://www.president.gov.tw/RSS.aspx?tabid=1104&amp;moduleid=2074">
-              <span data-l10n-id="panel-example-roc-president"></span>
-            </label>
-            <label class="radio only-zh-TW">
-              <input type="radio" name="example"
-                value="feed:http://feeds.feedburner.com/Pansci">
-              <span data-l10n-id="panel-example-pansci"></span>
-            </label>
-            <label class="radio only-zh-TW">
-              <input type="radio" name="example"
-                value="feed:http://rss.ptt.cc/Boy-Girl.xml">
-              <span data-l10n-id="panel-example-ptt-bg"></span>
-            </label>
 
             <div id="wc-psm" hidden></div>
           </form>
@@ -203,63 +138,6 @@
           <form id="wc-panel-wikipedia" hidden>
             <label data-l10n-id="panel-wikipedia" for="wc-panel-wikipedia-title"></label>
             <input type="text" id="wc-panel-wikipedia-title" class="input-medium" />
-          </form>
-
-          <form id="wc-panel-blogger" hidden>
-            <label data-l10n-id="panel-blogger-label" for="wc-panel-blogger-id"></label>
-            <input type="text" id="wc-panel-blogger-id" class="input-small" />
-            <span data-l10n-id="panel-blogger-help" class="help-block"></span>
-          </form>
-
-          <form id="wc-panel-tumblr" hidden>
-            <label data-l10n-id="panel-tumblr-label" for="wc-panel-tumblr-id"></label>
-            <input type="text" id="wc-panel-tumblr-id" class="input-small" />
-            <span data-l10n-id="panel-tumblr-help" class="help-block"></span>
-          </form>
-
-          <form id="wc-panel-wordpresscom" hidden>
-            <label data-l10n-id="panel-wordpresscom-label" for="wc-panel-wordpresscom-id"></label>
-            <input type="text" id="wc-panel-wordpresscom-id" class="input-small" />
-            <span data-l10n-id="panel-wordpresscom-help" class="help-block"></span>
-          </form>
-
-          <form id="wc-panel-pixnet" hidden>
-            <label data-l10n-id="panel-pixnet-label" for="wc-panel-pixnet-id"></label>
-            <input type="text" id="wc-panel-pixnet-id" class="input-small" />
-            <span data-l10n-id="panel-pixnet-help" class="help-block"></span>
-          </form>
-
-          <form id="wc-panel-wretchcc" hidden>
-            <label data-l10n-id="panel-wretchcc-label" for="wc-panel-wretchcc-id"></label>
-            <input type="text" id="wc-panel-wretchcc-id" class="input-small" />
-            <span data-l10n-id="panel-wretchcc-help" class="help-block"></span>
-          </form>
-
-          <form id="wc-panel-yamblog" hidden>
-            <label data-l10n-id="panel-yamblog-label" for="wc-panel-yamblog-id"></label>
-            <input type="text" id="wc-panel-yamblog-id" class="input-small" />
-            <span data-l10n-id="panel-yamblog-help" class="help-block"></span>
-          </form>
-
-          <form id="wc-panel-plurk" hidden>
-            <label data-l10n-id="panel-plurk-label" for="wc-panel-plurk-id"></label>
-            <input type="text" id="wc-panel-plurk-id"  class="input-small" />
-            <span data-l10n-id="panel-plurk-help" class="help-block"></span>
-          </form>
-
-          <form id="wc-panel-twitter" hidden>
-            <label data-l10n-id="panel-twitter-label" for="wc-panel-twitter-id"></label>
-            <div class="input-prepend">
-              <span class="add-on">@</span>
-              <input type="text" id="wc-panel-twitter-id" class="input-small" />
-            </div>
-            <span data-l10n-id="panel-twitter-help" class="help-block"></span>
-          </form>
-
-          <form id="wc-panel-feed" hidden>
-            <label data-l10n-id="panel-feed-label" for="wc-panel-feed-url"></label>
-            <input type="url" id="wc-panel-feed-url"  class="input-block-level" />
-            <span data-l10n-id="panel-feed-help" class="help-block"></span>
           </form>
 
           <form id="wc-panel-cp" hidden>
