--- a/about.zh-TW.html
+++ b/about.zh-TW.html
@@ -1,91 +1,6 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<style>
-*{margin:0;padding:0;}
-body {
-	font:13.34px helvetica,arial,freesans,clean,sans-serif;
-	color:black;
-	line-height:1.4em;
-	background-color: #F8F8F8;
-	padding: 0.7em;
-}
-p {
-	margin:1em 0;
-	line-height:1.5em;
-}
-table {
-	font-size:inherit;
-	font:100%;
-	margin:1em;
-}
-table th{border-bottom:1px solid #bbb;padding:.2em 1em;}
-table td{border-bottom:1px solid #ddd;padding:.2em 1em;}
-input[type=text],input[type=password],input[type=image],textarea{font:99% helvetica,arial,freesans,sans-serif;}
-select,option{padding:0 .25em;}
-optgroup{margin-top:.5em;}
-pre,code{font:12px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;}
-pre {
-	margin:1em 0;
-	font-size:12px;
-	background-color:#eee;
-	border:1px solid #ddd;
-	padding:5px;
-	line-height:1.5em;
-	color:#444;
-	overflow:auto;
-	-webkit-box-shadow:rgba(0,0,0,0.07) 0 1px 2px inset;
-	-webkit-border-radius:3px;
-	-moz-border-radius:3px;border-radius:3px;
-}
-pre code {
-	padding:0;
-	font-size:12px;
-	background-color:#eee;
-	border:none;
-}
-code {
-	font-size:12px;
-	background-color:#f8f8ff;
-	color:#444;
-	padding:0 .2em;
-	border:1px solid #dedede;
-}
-img{border:0;max-width:100%;}
-abbr{border-bottom:none;}
-a{color:#4183c4;text-decoration:none;}
-a:hover{text-decoration:underline;}
-a code,a:link code,a:visited code{color:#4183c4;}
-h2,h3{margin:1em 0;}
-h1,h2,h3,h4,h5,h6{border:0;}
-h1{font-size:170%;border-top:4px solid #aaa;padding-top:.5em;margin-top:1.5em;}
-h1:first-child{margin-top:0;padding-top:.25em;border-top:none;}
-h2{font-size:150%;margin-top:1.5em;border-top:4px solid #e0e0e0;padding-top:.5em;}
-h3{margin-top:1em;}
-hr{border:1px solid #ddd;}
-ul{margin:1em 0 1em 2em;}
-ol{margin:1em 0 1em 2em;}
-ul li,ol li{margin-top:.5em;margin-bottom:.5em;}
-ul ul,ul ol,ol ol,ol ul{margin-top:0;margin-bottom:0;}
-blockquote{margin:1em 0;border-left:5px solid #ddd;padding-left:.6em;color:#555;}
-dt{font-weight:bold;margin-left:1em;}
-dd{margin-left:2em;margin-bottom:1em;}
-@media screen and (min-width: 768px) {
-    body {
-        width: 748px;
-        margin:10px auto;
-    }
-}
-</style>
-<title>HTML5 文字雲</title>
-
-</head>
-<body>
 <h1>HTML5 文字雲</h1>
 
-<p>版權所有 2011, 2013 <a href="http://timdream.org/">Timothy Guan-tin Chien</a> 與其他貢獻者。
+<p>版權所有 2011, 2013-2017 <a href="http://timdream.org/">Timothy Guan-tin Chien</a> 與其他貢獻者。
 本作品使用 <a href="./MIT-LICENSE.txt">MIT 公眾授權</a>釋出。</p>
 
 <p><a href="https://github.com/timdream/wordcloud">程式碼</a>可於 Github 取得。
@@ -107,6 +22,8 @@ dd{margin-left:2em;margin-bottom:1em;}
 <p>這些資訊不會透漏給本站作者與貢獻者以外的第三方。
 閱讀 <a href="https://www.google.com/analytics/learn/privacy.html">Google Analytics 安全性與隱私權原則</a>以了解 Google 如何使用此類資訊。</p>
 
+<p><strong>這些資料收集可以從瀏覽器的 <a href="https://en.wikipedia.org/wiki/Do_Not_Track">Do Not Track</a> 設定關閉。</strong></p>
+
 <h3>第三方網路服務</h3>
 
 <p>當您選擇與第三方網路服務有關的特定功能，您的資料可能會被第三方網路服務收集。
@@ -121,6 +38,3 @@ dd{margin-left:2em;margin-bottom:1em;}
 <li><a href="http://www.tumblr.com/policy/en/privacy">Tumblr Privacy Policy</a></li>
 <li><a href="https://twitter.com/privacy">Twitter Privacy Policy</a></li>
 </ul>
-
-</body>
-</html>
