--- a/index.html
+++ b/index.html
@@ -119,17 +119,24 @@
             </div>
 
             <div class="alert alert-block alert-info only-en-US">
-              <h4>How can I get my own world cloud?</h4>
+              <h4>How can I get my own word cloud?</h4>
               <p>Unfortunately, Google and Facebook has closed their API services.
 Word Cloud can no longer access your data without these services.</p>
               <p>In the meantime, you could supply text or file directly on the left.
-There is also a <a href="http://timdream.org/wordcloud2.js/">page</a> available for fine-grain control.</p>
+            </div>
+            <div class="alert alert-block alert-info only-en-US">
+              <h4><a href="http://timdream.org/wordcloud2.js/">Word cloud for developers</a></h4>
+A demo page is available for fine-grain control of the backend library.</p>
             </div>
 
             <div class="alert alert-block alert-info only-zh-TW">
               <h4>如何製作我自己的文字雲？</h4>
               <p>很遺憾的，Google 和 Facebook 關閉了文字雲需要的 API 服務。文字雲無法直接抓取您的資料。</p>
               <p>您可以改使用右方的選項直接提供文字或檔案給文字雲。<a href="http://timdream.org/wordcloud2.js/">有另一個網頁</a>可以提供進階使用者自訂文字雲。</p>
+            </div>
+            <div class="alert alert-block alert-info only-zh-TW">
+              <h4><a href="http://timdream.org/wordcloud2.js/">進階開發者的文字雲</a></h4>
+您可以使用函式庫的範例頁面做文字雲產生的細節設定。</p>
             </div>
 
             <label class="radio only-en-US">
